Fix everything except and permissions